@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Tst11RunAction.hh,v 1.1 1999-01-08 16:35:37 gunter Exp $
+// $Id: Tst11RunAction.hh,v 1.2 1999-04-17 08:24:06 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -21,11 +21,11 @@ class Tst11RunAction : public G4UserRunAction
 {
   public:
     Tst11RunAction();
-    ~Tst11RunAction();
+    virtual ~Tst11RunAction();
 
   public:
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    virtual void BeginOfRunAction(const G4Run* aRun);
+    virtual void EndOfRunAction(const G4Run* aRun);
 
   private:
     G4int runIDcounter;
