@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Tst11RunAction.cc,v 1.1 1999-01-08 16:35:38 gunter Exp $
+// $Id: Tst11RunAction.cc,v 1.2 1999-04-17 08:24:09 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -24,12 +24,12 @@ Tst11RunAction::~Tst11RunAction()
 {
 }
 
-void Tst11RunAction::BeginOfRunAction(G4Run* aRun)
+void Tst11RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(runIDcounter++);
+  ((G4Run*)(aRun))->SetRunID(runIDcounter++);
 }
 
-void Tst11RunAction::EndOfRunAction(G4Run* aRun)
+void Tst11RunAction::EndOfRunAction(const G4Run* )
 {
 }
 
